added possibility to replace teacher in the lessons by period with selected substitute teachers