@@ -11,8 +11,6 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 import java.time.LocalDate;
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
@@ -60,7 +58,7 @@ public class StudentControllerTest {
 	private MockMvc mockMvc;
 
 	@BeforeEach
-	void setUpp() {
+	void setUp() {
 		this.mockMvc = MockMvcBuilders.standaloneSetup(studentController)
 				.setControllerAdvice(new ControllerExceptionHandler())
 				.setCustomArgumentResolvers(new PageableHandlerMethodArgumentResolver())
@@ -69,7 +67,7 @@ public class StudentControllerTest {
 
 	@Test
 	public void whenGetAll_thenGetRightStudentsPage() throws Exception {
-		Page<Student> expected = new PageImpl<>(Arrays.asList(buildStudent()));
+		Page<Student> expected = new PageImpl<>(List.of(buildStudent()));
 		when(studentService.getAllPage(PageRequest.of(0, 1))).thenReturn(expected);
 
 		mockMvc.perform(get("/students").param("page", "0").param("size", "1"))
@@ -133,7 +131,7 @@ public class StudentControllerTest {
 	@Test
 	public void givenNewStudent_whenSave_thenStudentIsCreating() throws Exception {
 		Student student = Student.builder()
-				.courses(new HashSet<>(Arrays.asList(Course.builder().id(1L).build())))
+				.courses(Set.of(Course.builder().id(1L).build()))
 				.group(Group.builder().id(1L).build())
 				.build();
 		when(groupService.findById(1L)).thenReturn(Optional.of(Group.builder().id(1L).name("AA-11").build()));
@@ -150,7 +148,7 @@ public class StudentControllerTest {
 	public void givenStudent_whenSave_thenStudentIsUpdating() throws Exception {
 		Student student = Student.builder()
 				.id(1L)
-				.courses(new HashSet<>(Arrays.asList(Course.builder().id(1L).build())))
+				.courses(Set.of(Course.builder().id(1L).build()))
 				.group(Group.builder().id(1L).build())
 				.build();
 		when(groupService.findById(1L)).thenReturn(Optional.of(Group.builder().id(1L).name("AA-11").build()));
@@ -177,7 +175,7 @@ public class StudentControllerTest {
 	@Test
 	public void givenDates_whenGetTimetable_thenGetRightLessons() throws Exception {
 		Student student = buildStudent();
-		List<Lesson> expected = Arrays.asList(buildLesson());
+		List<Lesson> expected = List.of(buildLesson());
 		LocalDate startDate = LocalDate.parse("2021-01-21");
 		LocalDate endDate = LocalDate.parse("2021-01-21");
 		when(studentService.findById(1L)).thenReturn(Optional.of(student));
@@ -197,34 +195,34 @@ public class StudentControllerTest {
 	private Student buildStudent() {
 		return Student.builder()
 				.id(1L)
-				.courses(new HashSet<>(Arrays.asList(Course.builder().id(1L).name("Art").build(),
-						Course.builder().id(2L).name("Law").build())))
+				.courses(Set.of(Course.builder().id(1L).name("Art").build(),
+						Course.builder().id(2L).name("Law").build()))
 				.gender(Gender.MALE)
 				.group(Group.builder().id(1L).name("AA-11").build())
 				.build();
 	}
 
 	private List<Course> buildCourses() {
-		return Arrays.asList(Course.builder().id(1L).name("Law").build(),
+		return List.of(Course.builder().id(1L).name("Law").build(),
 				Course.builder().id(2L).name("Biology").build(),
 				Course.builder().id(3L).name("Music").build());
 	}
 
 	private List<Group> buildGroups() {
-		return Arrays.asList(Group.builder().id(1L).name("AA-11").build(),
+		return List.of(Group.builder().id(1L).name("AA-11").build(),
 				Group.builder().id(2L).name("BB-22").build(),
 				Group.builder().id(3L).name("CC-33").build());
 	}
 
 	private Lesson buildLesson() {
 		Room room = Room.builder().id(1L).name("111").capacity(30).build();
-		Course course = Course.builder().id(1L).name("Art").rooms(new HashSet<>(Arrays.asList(room))).build();
-		Set<Group> groups = new HashSet<>(Arrays.asList(Group.builder().id(1L).name("AA-11").build()));
+		Course course = Course.builder().id(1L).name("Art").rooms(Set.of(room)).build();
+		Set<Group> groups = Set.of(Group.builder().id(1L).name("AA-11").build());
 		Teacher teacher = Teacher.builder()
 				.id(1L)
 				.name("Homer")
 				.surname("Simpson")
-				.courses(new HashSet<>(Arrays.asList(course)))
+				.courses(Set.of(course))
 				.build();
 		Timeframe timeframe = Timeframe.builder()
 				.id(1L)
